@startuml

title __MODEL's Class Diagram__\n

  namespace Model {
    class Model.BankAccount {
        - accountNo : String
        - accountType : String
        - bankName : String
        - routingNo : String
        + BankAccount()
        + BankAccount()
        + BankAccount()
        + getAccountNo()
        + getAccountType()
        + getBankName()
        + getRoutingNo()
        + setAccountNo()
        + setAccountType()
        + setBankName()
        + setRoutingNo()
    }
  }
  

  namespace Model {
    class Model.Employee {
        - bankAccount : String
        - empID : int
        - managerID : int
        + Employee()
        + Employee()
        + Employee()
        + getBankAccount()
        + getEmpID()
        + getManagerID()
        + setBankAccount()
        + setEmpID()
        + setManagerID()
    }
  }
  

  namespace Model {
    class Model.EmployeeResponse {
        - employee : List<Employee>
        + EmployeeResponse()
        + setEmpList()
    }
  }
  

  namespace Model {
    class Model.Manager {
        - managerID : int
        + Manager()
        + Manager()
        + getManagerID()
        + setManagerID()
    }
  }
  

  namespace Model {
    class Model.Reimbursement {
        - bankAccount : String
        - empID : int
        - managerID : int
        - reimburseAmount : double
        - reimbursementID : int
        - status : String
        + Reimbursement()
        + Reimbursement()
        + Reimbursement()
        + Reimbursement()
        + getBankAccount()
        + getEmpID()
        + getManagerID()
        + getReimburseAmount()
        + getReimbursmentID()
        + getStatus()
        + setBankAccount()
        + setEmpID()
        + setManagerID()
        + setReimburseAmount()
        + setReimbursmentID()
        + setStatus()
    }
  }
  

  namespace Model {
    class Model.ReimbursementResponse {
        - reimbursement : List<Reimbursement>
        + ReimbursementResponse()
        + setReimbursement()
    }
  }
  

  namespace Model {
    class Model.User {
        - emailID : String
        - firstName : String
        - lastName : String
        - loginID : String
        - password : String
        + User()
        + User()
        + User()
        + getEmailID()
        + getFirstName()
        + getLastName()
        + getLoginID()
        + getPassword()
        + setEmailID()
        + setFirstName()
        + setLastName()
        + setLoginID()
        + setPassword()
    }
  }
  

  Model.Employee -up-|> Model.User
  Model.Manager -up-|> Model.User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
